[desk-tool] Fix document pane scroller height on narrow devices

--- a/packages/@sanity/desk-tool/src/panes/documentPane/documentPanel/documentPanel.css
+++ b/packages/@sanity/desk-tool/src/panes/documentPane/documentPanel/documentPanel.css
@@ -40,6 +40,8 @@
 }
 
 .documentScroller {
+  height: 100%;
+
   @media (--screen-medium) {
     height: 100%;
     overflow: auto;
